# nameless-locksmith

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TUI-PLAN.md  history-of-locks.md
.github/workflows/: ci.yml  pages.yml  release.yml
src/: lib.rs  main.rs  tui.rs
src/i18n/: de.txt  en.txt  es.txt  fr.txt  pl.txt  pt.txt  ru.txt  uk.txt
web/: app.js  build-data.mjs  data.js  helpers.js  index.html  robots.txt  sitemap.xml  solver.js  style.css  verify.mjs
web-wasm/: Cargo.toml
web-wasm/src/: lib.rs
