[package]
name = "nameless-locksmith"
version = "0.9.2"
edition = "2021"
description = "Solver and history manager for the lockpicking minigame in Gothic Remake"
license = "MIT"
repository = "https://github.com/Arminek/nameless-locksmith"

[workspace]
members = ["web-wasm"]

# The command users actually type. Kept short and matches the in-app help/history.
[[bin]]
name = "locks"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"

# The TUI deps are only needed by the `locks` binary (native). Gating them off
# wasm keeps the core lib compiling cleanly when web-wasm links it.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.29.0"
ratatui = "0.30.1"
